# AgentOps-WorkflowVerify

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260623_0001_create_workflow_tables.py
backend/app/: main.py
backend/app/api/: health.py  workflow_runs.py
backend/app/core/: config.py  logging.py  request_context.py
backend/app/db/: session.py
backend/app/middleware/: request_id.py
backend/app/models/: __init__.py  agent_step.py  approval_decision.py  validation_result.py  workflow_run.py
backend/app/schemas/: __init__.py  agent_step.py  approval_decision.py  validation_result.py  workflow_run.py
backend/app/services/: __init__.py  agent_simulator.py  validation_engine.py
backend/app/tests/: test_agent_simulator.py  test_health.py  test_human_approval_api.py  test_models.py  test_request_id_middleware.py  test_validation_engine.py  test_workflow_detail_api.py  test_workflow_execution_api.py  test_workflow_runs_api.py
docs/: 00-project-overview.md  01-backend-foundation.md  02-database-model.md  03-workflow-api.md  04-agent-simulator.md  05-validation-engine.md  06-human-approval.md  07-frontend-shell.md  08-workflow-dashboard.md  09-workflow-detail-trace-viewer.md  10-e2e-tests.md  11-docker-compose.md  12-github-actions-ci.md  13-observability-structured-logs.md  14-architecture-review.md  final-verification-checklist.md  glossary.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  (+4 more)
(+20 files in other folders)
