[project]
name = "agentops-workflow-backend"
version = "0.1.0"
description = "Backend foundation for the AgentOps Workflow Verification Platform."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.32.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
